adde macos-container
working, including local storage until app is de-installed

--- a/iOS+macOS/web/index.html
+++ b/iOS+macOS/web/index.html
@@ -14,6 +14,9 @@ body { background-color:#888888}
   
 	/* Standards */
 	.standardpadding { padding-top: 20px; }
+	
+	/* no selection! Works on iOS and macOS */
+    * { -webkit-touch-callout: none; -webkit-user-select: none; }
 </style>
 
 <body>
